force-app/main/default/objects/Tournament__c/fields/Bracket_Json__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Json__c</fullName>
    <label>Bracket JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>