force-app/main/default/objects/Tournament__c/fields/Bracket_Type__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Type__c</fullName>
    <label>Bracket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RoundRobin</fullName>
            </value>
            <value>
                <fullName>Elimination</fullName>
            </value>
            <value>
                <fullName>OpenLadder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>