force-app/main/default/objects/Tournament__c/fields/Max_Participants__c.field-meta.xml
<CustomField>
    <fullName>Max_Participants__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Max Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>