force-app/main/default/objects/Tournament__c/fields/Prize_Description__c.field-meta.xml
<CustomField>
    <fullName>Prize_Description__c</fullName>
    <label>Prize Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>