force-app/main/default/objects/Tournament__c/fields/Public_Join_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Public_Join_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Public Join Enabled</label>
    <type>Checkbox</type>
</CustomField>