force-app/main/default/objects/Tournament__c/fields/Public_Join_Token__c.field-meta.xml
<CustomField>
    <fullName>Public_Join_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Random slug used in the public join URL (e.g. /certgame/?t=abc123).</description>
    <externalId>true</externalId>
    <label>Public Join Token</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>