force-app/main/default/objects/Tournament__c/fields/Questions_Per_Match__c.field-meta.xml
<CustomField>
    <fullName>Questions_Per_Match__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Questions Per Match</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>