force-app/main/default/objects/Tournament__c/fields/Sponsor_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Logo_URL__c</fullName>
    <label>Sponsor Logo URL</label>
    <type>Url</type>
</CustomField>