force-app/main/default/objects/Tournament__c/fields/Start_At__c.field-meta.xml
<CustomField>
    <fullName>Start_At__c</fullName>
    <label>Start At</label>
    <type>DateTime</type>
</CustomField>