force-app/main/default/objects/Tournament__c/fields/Winner_Player__c.field-meta.xml
<CustomField>
    <fullName>Winner_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Tournaments Won</relationshipLabel>
    <relationshipName>Tournaments_Won</relationshipName>
    <type>Lookup</type>
</CustomField>